[gd_scene load_steps=4 format=3 uid="uid://crpexolkbf665"]

[ext_resource type="Script" uid="uid://bm4vmn4y7aq8u" path="res://src/tutorial_menu.gd" id="1_d0cyn"]
[ext_resource type="StyleBox" uid="uid://q323yqe6difc" path="res://resources/menu_button_normal.tres" id="1_n4abv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_maro1"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.462745, 0.588235, 0.337255, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.933333, 0.933333, 0.886275, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 4
shadow_offset = Vector2(-2, 2)

[node name="TutorialMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d0cyn")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -83.0
offset_right = 77.5
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_maro1")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.886275, 1)
theme_override_font_sizes/font_size = 64
text = "Controls"
horizontal_alignment = 1

[node name="Movement" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.886275, 1)
theme_override_font_sizes/font_size = 24
text = "[WASD] - Movement"
horizontal_alignment = 1

[node name="Ability" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.886275, 1)
theme_override_font_sizes/font_size = 24
text = "[SPACE] - Use Ability"
horizontal_alignment = 1

[node name="SpeedUp" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.886275, 1)
theme_override_font_sizes/font_size = 24
text = "[Shift] - Speed Up"
horizontal_alignment = 1

[node name="SlowDown" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.886275, 1)
theme_override_font_sizes/font_size = 24
text = "[CTRL] - Slow Down"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_colors/font_focus_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("1_n4abv")
text = "Cancel"

[node name="Play" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_colors/font_focus_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("1_n4abv")
text = "Play
"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
